--- a/package.json
+++ b/package.json
@@ -1,69 +1,44 @@
 {
-  "name": "tailwind-nextjs-starter-blog",
-  "version": "1.1.3",
+  "name": "blog-next",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "next-remote-watch ./data",
     "dev": "next dev",
     "build": "next build",
-    "serve": "next start",
-    "analyze": "cross-env ANALYZE=true next build",
-    "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
-    "prepare": "husky install"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.4.1",
-    "autoprefixer": "^10.3.7",
-    "esbuild": "^0.13.6",
-    "github-slugger": "^1.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mapbox/rehype-prism": "^0.8.0",
+    "@mdx-js/loader": "^2.1.2",
+    "@next/mdx": "^12.2.1",
+    "date-fns": "^2.28.0",
+    "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
-    "image-size": "1.0.0",
-    "mdx-bundler": "^6.0.2",
-    "next": "11.1.2",
-    "next-themes": "^0.0.15",
-    "postcss": "^8.3.9",
-    "preact": "^10.5.15",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "reading-time": "1.5.0",
-    "rehype-autolink-headings": "^6.1.0",
-    "rehype-prism-plus": "^1.1.0",
-    "rehype-slug": "^5.0.0",
-    "remark-footnotes": "^4.0.1",
-    "remark-gfm": "^3.0.0",
-    "remark-math": "^5.1.0",
-    "sharp": "^0.29.1",
-    "tailwindcss": "^2.2.17",
-    "unist-util-visit": "^4.1.0"
+    "next": "12.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "11.1.2",
-    "@svgr/webpack": "^5.5.0",
-    "@types/react": "^17.0.30",
-    "@types/tailwindcss": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "cross-env": "^7.0.3",
-    "dedent": "^0.7.0",
-    "eslint": "7",
-    "eslint-config-next": "11.1.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "file-loader": "^6.2.0",
-    "husky": "^7.0.2",
-    "inquirer": "^8.2.0",
-    "lint-staged": "^11.2.3",
-    "next-remote-watch": "^1.0.0",
-    "prettier": "2.4.1",
-    "typescript": "^4.4.4"
-  },
-  "lint-staged": {
-    "*.+(js|jsx|ts|tsx)": [
-      "eslint --fix"
-    ],
-    "*.+(js|jsx|ts|tsx|json|css|md|mdx)": [
-      "prettier --write"
-    ]
+    "@tailwindcss/typography": "^0.5.3",
+    "@types/glob": "^7.2.0",
+    "@types/node": "18.0.3",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "autoprefixer": "^10.4.7",
+    "classnames": "^2.3.1",
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.5",
+    "typescript": "4.7.4"
   }
 }
