--- a/package.json
+++ b/package.json
@@ -9,36 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mapbox/rehype-prism": "^0.8.0",
-    "@mdx-js/loader": "^2.1.2",
-    "@next/mdx": "^12.2.1",
-    "date-fns": "^2.28.0",
+    "@mdx-js/loader": "^2.2.1",
+    "@next/font": "^13.1.1",
+    "@next/mdx": "^13.1.1",
+    "date-fns": "^2.29.3",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
-    "next": "12.2.1",
+    "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.3",
-    "@types/glob": "^7.2.0",
-    "@types/node": "18.0.3",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "autoprefixer": "^10.4.7",
-    "classnames": "^2.3.1",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.1",
-    "eslint-config-prettier": "^8.5.0",
+    "@tailwindcss/typography": "^0.5.8",
+    "@types/glob": "^8.0.0",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "autoprefixer": "^10.4.13",
+    "classnames": "^2.3.2",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.5",
-    "typescript": "4.7.4"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
   }
 }
