--- a/package.json
+++ b/package.json
@@ -14,22 +14,18 @@
     "@mapbox/rehype-prism": "^0.8.0",
     "@next/font": "^13.1.1",
     "@next/mdx": "^13.1.1",
-    "date-fns": "^2.29.3",
-    "glob": "^8.0.3",
-    "gray-matter": "^4.0.3",
+    "clsx": "^1.2.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.8",
-    "@types/glob": "^8.0.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "autoprefixer": "^10.4.13",
-    "classnames": "^2.3.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "^8.6.0",
