--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mapbox/rehype-prism": "^0.8.0",
-    "@next/font": "^13.1.1",
-    "@next/mdx": "^13.1.1",
+    "@mdx-js/react": "^2.2.1",
+    "@next/font": "^13.1.6",
+    "@next/mdx": "^13.1.6",
     "clsx": "^1.2.1",
-    "next": "13.1.1",
+    "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@mdx-js/loader": "^2.2.1",
-    "@tailwindcss/typography": "^0.5.8",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
+    "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -40,6 +41,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "4.9.5",
+    "webpack": "^5.75.0"
   }
 }
