--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "clsx": "^2.1.1",
     "next": "15.2.1",
+    "next-themes": "^0.4.4",
     "react": "^19",
     "react-dom": "^19"
   },
