--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "clsx": "^2.1.1",
-    "next": "15.2.1",
-    "next-themes": "^0.4.4",
+    "next": "16.0.3",
+    "next-themes": "^0.4.6",
     "react": "^19",
     "react-dom": "^19"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@tailwindcss/postcss": "^4.0.9",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22",
+    "@biomejs/biome": "^2.3.6",
+    "@eslint/js": "^9.39.1",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react": "^7.37.4",
-    "jiti": "^2.4.2",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^4.0.9",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
+    "jiti": "^2.6.1",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5",
-    "typescript-eslint": "^8.26.0"
+    "typescript-eslint": "^8.46.4"
   }
 }
